k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diaryapp
  labels:
    name: diaryapp
    environment: production
