k8s/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  namespace: diaryapp
spec:
  type: ClusterIP
  selector:
    app: sqlserver
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
