k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: diaryapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
